index.css
/* ... */
@media (max-width: 480px) {
    .testimo {
        font-size: 1.35em;
    }

    #client-feedback {
        padding: 4em 1.2em;

    }

    .testimony-flex svg {
        width: 100px;
        height: 100px;
    }

    .testimony-flex> :first-child {
        order: 999;
    }

    .testimony-flex {
        gap: 0.5em;

    }

    .testimony-svg {
        display: none;
    }
}

@media (max-width: 1024px) {
    .footer {
        min-height: auto;
        gap: 40px;
        align-items: start;
    }

    .footer .footer-first-col>h1 {
        font-size: 4rem;
        flex-direction: column;
        gap: 14px;
        text-align: center;
    }

    .footer .footer-second-col {
        padding: 20px 40px;
        gap: 40px;
    }

    .footer .third-col p {
        font-size: 110px;
        letter-spacing: 25px;
    }
}

@media (max-width: 768px) {
    .footer {
        padding: 20px;
        padding-top: 3em;
        width: 100vw;
    }

    .footer .footer-first-col>h1 {
        font-size: 2.8rem;
    }

    .footer .footer-first-col {
        align-self: center;
        display: none;
    }

    .footer .footer-first-col>h1 span {
        width: 5em;
    }

    .footer .footer-second-col {
        flex-direction: column;
        padding: 0;
        gap: 40px;
    }

    .footer .newsletter {
        width: 70%;
    }

    .footer .newsletter .newsletter-text {
        max-width: 100%;
        font-size: 14px;
    }

    .qoute-text {
        font-size: 16px;
    }

    .footer .social {
        grid-template-columns: 1fr;
        grid-template-rows: auto;
        gap: 10px;
        text-align: left;
        align-items: start;
    }

    .footer .social a {
        font-size: 16px;

    }

    .footer .third-col p {
        font-size: 64px;
        letter-spacing: 12px;
        text-align: center;
        align-self: flex-start;
    }

    .footer .footer-last-col {
        flex-direction: column;
        gap: 14px;
        text-align: center;
    }

    .footer .footer-last-col p {
        font-size: 14px;
    }

    .footer .last-col-ul {
        flex-wrap: wrap;
        gap: 8px;
        align-self: flex-start;
    }

    .footer .footer-links-bar {
        display: none;
    }

    .drive {
        font-size: 2.4em;
        padding: 15px;
    }

    .link-p {
        display: none;
        gap:2em;
    }
}

@media (max-width: 480px) {
    .footer .footer-first-col>h1 {
        font-size: 2.2rem;
    }

    .footer .third-col p {
        font-size: 48px;
        letter-spacing: 6px;
    }

    .footer .newsletter .subscribe input {
        font-size: 14px;
    }

}

